fixing ken burns overflow issue

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -10,6 +10,10 @@
   // overflow: hidden;
 }
 
+.swiper-wrapper {
+  padding: 5px;
+}
+
 
 .an-awards__image {
 
